--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  geocoding: ^3.0.0
+  geolocator: ^12.0.0
   http: ^1.2.1
   provider: ^6.1.2
 
