--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   http: ^1.2.1
   provider: ^6.1.2
   shared_preferences: ^2.2.3
+  webview_flutter: ^4.8.0
 
 dev_dependencies:
   flutter_test:
