--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
   sdk: '>=3.0.5 <4.0.0'
 
 dependencies:
+  firebase_messaging: ^15.0.2
   flutter:
     sdk: flutter
   flutter_localizations:
