--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,6 +33,9 @@ android {
     ndkVersion flutter.ndkVersion
 
     compileOptions {
+        // for flutter_local_notifications
+        // coreLibraryDesugaringEnabled true
+        
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
