--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_messaging: ^15.0.2
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^17.2.1+1
   flutter_localizations:
     sdk: flutter
   geocoding: ^3.0.0
